--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,17 @@
   .row-fluid.news
 
     .span4
+      %h4= "Betacube Hyperlink Meetup #4"
+      %p.date= "10.06.2014"
+      .news_content
+        %p= "Join the Hyperlink meetup and have a great evening talking about the latest happenings in the web development world while holding a juicy beverage."
+        %p= "When: 10. December 2014 @ 7PM"
+        %p= "Where: Technoport Esch/Belval"
+        %p
+          :plain
+            <a href="http://www.betacube.eu/meetups/hyperlink_4"> Registration and event details</a>
+
+    .span4
       %h4= "Betacube After Work"
       %p.date= "08.10.2014"
       .news_content
@@ -60,7 +71,7 @@
             <a href="http://www.techup.lu/472" target="_new">Registration and event details</a>
 
     .span4
-      %h4= "Betacube Hyperlink Meetup #{3}"
+      %h4= "Betacube Hyperlink Meetup #3"
       %p.date= "10.06.2014"
       .news_content
         %p= "Join the Hyperlink meetup and have a great evening talking about the latest happenings in the web development world while holding a juicy beverage."
@@ -69,15 +80,3 @@
         %p
           :plain
             <a href="http://www.betacube.eu/meetups/hyperlink_3"> Registration and event details</a>
-
-    .span4
-      %h4= "Betacube After Work"
-      %p.date= "14.05.2014"
-      .news_content
-        %p= "Get ready for some AfterWork action!"
-        %p= "Join us for a cold/hot beverage and meet fellow developers from Luxembourg and the Greater Region."
-        %p= "When: 14. May 2014 @ 7PM"
-        %p= "Where: Independent Cafe in Luxembourg"
-        %p
-          :plain
-            <a href="http://www.techup.lu/415" target="_new">Registration and event details</a>
