Added additional information about the panel discussion.

--- a/app/views/content/meetups_hyperlink_4.html.haml
+++ b/app/views/content/meetups_hyperlink_4.html.haml
@@ -11,7 +11,12 @@
     %ul
       %li= "19:00 - Doors open"
       %li= "19:30 - Introduction"
-      %li= "20:00 - Talks (tba)"
+      %li
+        = "20:00 - Panel discussion: Being part of #WebSummit / #Summit14lu"
+        %ul
+          %li= "Oswald De Riemaecker (Continuous PHP)"
+          %li= "Gilles Poulles (Sponsor My Event)"
+          %li= "Michel Hoffmann (Individuum)"
       %li= "21:30 - Dinner & Networking"
       %li= "23:00 - End"
 
